Added Index Sections

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello world!" 
+<html>
+<body>
+  <header>
+  </header>
+
+	<section id="slider">
+
+	</section>
+
+<footer>
+</footer>
+
+</html>
