--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 	</section>
 
 <footer>
+<div class="row">
+      <div class="columns small-12 large-6">
+        <section class="navigation">
+          <h2>Navigation</h2>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Conferences</a></li>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Admissions</a></li>
+            <li><a href="#">Page Templates</a></li>
+          </ul>
+        </section>
+
+        <section class="legal">
+          <h2>Legal</h2>
+          <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM</p>
+        </section>
+      </div>
+      
+    </div>
 </footer>
 
 </html>
