--- a/index.html
+++ b/index.html
@@ -1,6 +1,61 @@
 <html>
 <body>
   <header>
+     <div class="contain-to-grid">
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name"><h1><a href="#">Home</a></h1></li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+          <ul class="left">
+            <li><a href="#">News</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Page Templates</a></li>
+            <li><a href="#">Admissions</a></li>
+            <li><a href="#">Conferences</a></li>
+          </ul>
+        </section>
+      </nav>
+    </div>
+
+    <div class="row">
+      <div class="columns small-12 medium-8">
+        <h1 id="logo"><a href="#">Academia</a></h1>
+      </div>
+
+      <div class="columns small-12 medium-4">
+        <div class="row">
+          <div class="columns small-12">
+            <section id="search">
+              <h2>Search</h2>
+              <form>
+                <div class="row">
+                  <div class="columns small-12 medium-6">
+                    <input type="search" placeholder="search" value="">
+                  </div>
+                  <div class="columns small-12 medium-6">
+                    <input type="submit" value="Search">
+                  </div>
+                </div>
+              </form>
+            </section>
+          </div>
+
+          <div class="columns small-12">
+            <section id="social">
+              <h2>Social Networks</h2>
+              <ul>
+                <li><a href="#" class="facebook">Facebook</a></li>
+                <li><a href="#" class="twitter">Twitter</a></li>
+              </ul>
+            </section>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
 	<section id="slider">
