--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
         		<h2>Spotlight</h2>
         	<ul data-orbit>
           		<li>
-            			<img src="img/img930x300.jpg" alt="" width="970">
+            			<img src="img/university_of_sydney_main_quadrangle-960x300.jpg" alt="" width="970">
           		</li>
           		<li>
-            			<img src="img/afiche-930x300.jpg" alt="" width="970">
+            			<img src="img/university-960x300.jpg" alt="" width="970">
           		</li>
           		<li>
-            			<img src="img/motherboard-930x300.jpg" alt="" width="970">
+            			<img src="img/3604715319_ff40f98c7c_b-960x300.jpg" alt="" width="970">
           		</li>
-          		
+          		<li>
+            			<img src="img/2372511080_11b724aff2_b-960x300.jpg" alt="" width="970">
+          		</li>
         	</ul>
              </div>
            </div>
