--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section class="legal">
           <h2>Legal</h2>
-          <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM</p>
+          <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM, aqui estoy realizando mi segundo cambio</p>
         </section>
       </div>
       
