--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
+<head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Academia</title>
+
+  <link rel="stylesheet" href="css/foundation.css" type="text/css">
+  <link rel="stylesheet" href="css/screen.css" type="text/css">
+  <script src="js/vendor/modernizr.js"></script>
+</head>
 <body>
   <header>
   </header>
@@ -28,7 +38,16 @@
           <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM, aqui estoy realizando mi segundo cambio</p>
         </section>
       </div>
-      
+      <div class="columns small-12 large-4">
+        <section class="contact">
+          <h2>Contact Us</h2>
+          <p>
+            Social University<br>
+            12, rue de la montagne, 01234 Exampleville, France<br>
+            <a href="mailto:example@example.com">example@example.com</a>
+          </p>
+        </section>
+      </div>
     </div>
 </footer>
 
