finalizando footer y estilos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section class="legal">
           <h2>Legal</h2>
-          <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM, aqui estoy realizando mi segundo cambio</p>
+          <p>Copyright © 2013 Academica. All rights reserved. WordPress Theme by WPZOOM</p>
         </section>
       </div>
       <div class="columns small-12 large-4">
