--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Academia</title>
 
@@ -43,7 +42,7 @@
           <h2>Contact Us</h2>
           <p>
             Social University<br>
-            12, rue de la montagne, 01234 Exampleville, France<br>
+            12, rue de la montagne, 01234 Examplevill3e, France<br>
             <a href="mailto:example@example.com">example@example.com</a>
           </p>
         </section>
